Fixed header alignment

--- a/about-us/about-us.css
+++ b/about-us/about-us.css
@@ -1,8 +1,8 @@
-.head-checkbox.shop {
+.head-checkbox.about-us {
     color: white;
     background-color: black;
 }
 
-.shop img.paw-icon {
+.about-us img.paw-icon {
     width: auto;
 }
