--- a/index.css
+++ b/index.css
@@ -3,3 +3,7 @@
     color: white;
     background-color: black;
 }
+
+.home img.paw-icon {
+    width: auto;
+}
